# freetype2

./: .gitignore  README.md
testing/: README.md  libfreetype.so.6.18.3
trunk/: freetype-2.12.1.tar.xz  freetype-doc-2.12.1.tar.xz  freetype2-2.12.1-1-x86_64.pkg.tar.zst  freetype2-demos-2.12.1-1-x86_64.pkg.tar.zst  freetype2-docs-2.12.1-1-x86_64.pkg.tar.zst  ft2demos-2.12.1.tar.xz
trunk/pkg/freetype2/: .BUILDINFO  .MTREE  .PKGINFO
trunk/pkg/freetype2-debug/: .BUILDINFO  .MTREE  .PKGINFO
trunk/pkg/freetype2-demos/: .BUILDINFO  .MTREE  .PKGINFO
trunk/pkg/freetype2-docs/: .BUILDINFO  .MTREE  .PKGINFO
trunk/pkg/freetype2/usr/lib/: libfreetype.so.6.18.3
trunk/src/: 0001-Enable-table-validation-modules.patch  0002-Enable-subpixel-rendering.patch  0003-Enable-infinality-subpixel-hinting.patch  0004-Enable-long-PCF-family-names.patch  freetype-2.12.1.tar.xz  freetype-2.12.1.tar.xz.sig  freetype-doc-2.12.1.tar.xz  freetype-doc-2.12.1.tar.xz.sig  freetype2.sh  ft2demos-2.12.1.tar.xz  ft2demos-2.12.1.tar.xz.sig
trunk/src/.cache/clangd/index/: afblue.h.3BD18871DB8351BA.idx  afcover.h.0CA6D7955F1670FE.idx  afdummy.h.E1B0EF151428BAD2.idx  aferrors.h.22097331F1482951.idx  afindic.c.B1A1B61CA585F693.idx  afloader.c.70A95965C0AA5F58.idx  afscript.h.2F996A27DE93D928.idx  aftypes.h.48FC8E5150AA80B1.idx  afws-decl.h.DD5BE49022943EBB.idx  bdfdrivr.c.4B0B1B751D243752.idx  bdferror.h.14FB45873E31AC41.idx  cffcmap.c.EE981D5AC35052B3.idx  cffdecode.c.065EF316BE8C61D7.idx  cffdecode.h.52E6999C6F9F10CD.idx  cffgload.c.974304FD8BED32BF.idx  cffgload.h.A708C11303AA81CC.idx  cffobjs.c.BEC5AFAB2625C663.idx  cffobjs.h.04A67299FDD3F906.idx  cffotypes.h.0373F18D3C6D4B9F.idx  cffparse.c.6A0D9850CFB6132C.idx  cffparse.h.7B9A7EDBB43B65BD.idx  ciderrs.h.794979805C5D99C1.idx  cidgload.h.61CD469E4A64DC09.idx  cidload.c.DA928D376984678B.idx  cidobjs.h.15548A913B85BBBE.idx  cidriver.c.C50BE4709907324C.idx  cidtoken.h.6E807C76F68E9AA2.idx  compiler-macros.h.E86D724C49516549.idx  fnterrs.h.ABD3237EF05EE225.idx  freetype.h.340FFB777F926C48.idx  ft2build.h.16F90F1DEB66557C.idx  ftbbox.h.5F29872EB233BA9F.idx  ftbsdf.c.21332A549066BE43.idx  ftcache.h.064ABFBDE9CAE283.idx  ftcalc.h.4D85BA609278EA20.idx  ftcbasic.c.D91169B4B7E5E5E2.idx  ftccache.c.D2E2390CBA7085FD.idx  ftccache.h.B1C5350C45FDD116.idx  ftcglyph.h.062BAA089EFAFC86.idx  ftcmanag.c.106AB9DC226993B7.idx  (+184 more)
trunk/src/freetype-2.12.1/: README.freetype-doc  modules.cfg
trunk/src/freetype-2.12.1/docs/: ft2faq.html
trunk/src/freetype-2.12.1/docs/design/: design-1.html  design-3.html  design-4.html  design-5.html  design-6.html
trunk/src/freetype-2.12.1/docs/glyphs/: glyphs-1.html  glyphs-4.html  index.html
trunk/src/ft2demos-2.12.1/: ChangeLog  ChangeLog.old  Makefile  README  README.meson  meson.build  vms_make.com
trunk/src/ft2demos-2.12.1/.cache/clangd/index/: autofit.c.0A97031BD0DE3C0D.idx  bdf.c.9ED583D1BCEF855C.idx  cff.c.BC3D4F59D9A26182.idx  common.c.ED66EB3CF6E91CF4.idx  common.h.2965AD3B325F91B7.idx  ftbase.c.A89C2FDC5EC24255.idx  ftbbox.c.8C57B2EB650C3EB9.idx  ftbdf.c.E1AB395C06302BB7.idx  ftbench.c.AA36AFD5E8242D61.idx  ftbitmap.c.FF1C5ACAB3C6EFFC.idx  ftbzip2.c.88947D52C1B95173.idx  ftcache.c.5C1E00CE9504954A.idx  ftchkwd.c.908E02419FB4C24E.idx  ftcid.c.47B8A53F93E2E3BF.idx  ftcommon.c.5D05281D4823B15C.idx  ftcommon.h.B16D27A4612E5309.idx  ftdebug.c.2C975C5DEF17AB3E.idx  ftdiff.c.BA735C8D4FACC04B.idx  ftdump.c.83993525261C48B2.idx  ftfstype.c.2590A2B34EA29E14.idx  ftgamma.c.0168C1A3DB2D628D.idx  ftgasp.c.DCC8339685EE19C0.idx  ftglyph.c.D8E1F8ABF3F22A8C.idx  ftgrid.c.4E5CEC9548759638.idx  ftgxval.c.FB91BE9A1B5848A8.idx  ftgzip.c.AC85EE5E06DDD789.idx  ftinit.c.AE7DF9ED42101B29.idx  ftlint.c.8C9E91F564C60B4F.idx  ftlzw.c.B927D59891091BA0.idx  ftmemchk.c.4B5F1BAE1390C5A7.idx  ftmm.c.A114382879DB35BA.idx  ftmulti.c.8E04B19FAF92D47A.idx  ftotval.c.C2DF406C46F8BB24.idx  ftpatchk.c.668CBD97F3984B71.idx  ftpatent.c.AA6EEA4D10E8785A.idx  ftpfr.c.B64CBCED66470B96.idx  ftpngout.c.1B5DCAFDFC0DC529.idx  ftsdf.c.9F323FF4F56E4D0C.idx  ftstring.c.CDCF9FD3E0DE8945.idx  ftstroke.c.92BCEFC7F07B2741.idx  (+57 more)
trunk/src/ft2demos-2.12.1/builds/windows/msvc/: ft2demos.props  ft2demos.sln  ftbench.vcxproj  ftdump.vcxproj  ftgamma.vcxproj  ftgrid.vcxproj  ftlint.vcxproj  ftstring.vcxproj  ftview.vcxproj  migs.vcxproj
trunk/src/ft2demos-2.12.1/graph/: gblany.h  graph.h  grconfig.h  grdevice.c  grdevice.h  grevents.h  grfill.c  grfont.c  grinit.c  grobjs.c  grobjs.h  grswizzle.c  grtypes.h  meson.build  migs.html  rules.mk
trunk/src/ft2demos-2.12.1/graph/allegro/: gralleg.c  rules.mk
trunk/src/ft2demos-2.12.1/graph/batch/: grbatch.c  grbatch.h  rules.mk
trunk/src/ft2demos-2.12.1/graph/beos/: grbeos.cpp  rules.mk
trunk/src/ft2demos-2.12.1/graph/mac/: grmac.c
trunk/src/ft2demos-2.12.1/graph/os2/: rules.mk
trunk/src/ft2demos-2.12.1/graph/win32/: grwin32.c  grwin32.h  rules.mk
trunk/src/ft2demos-2.12.1/graph/x11/: grx11.c  grx11.h  rules.mk
trunk/src/ft2demos-2.12.1/mac/: Makefile  ftoldmac.c  ftoldmac.m68k_far.make.txt  ftoldmac.ppc_classic.make.txt  getargv.c
trunk/src/ft2demos-2.12.1/mac/codewarrior/: ftlint.prj  ftview.prj
trunk/src/ft2demos-2.12.1/man/: ftbench.1  ftdiff.1  ftdump.1  ftgamma.1  ftgrid.1  ftlint.1  ftmulti.1  ftsdf.1  ftstring.1  ftvalid.1  ftview.1  ttdebug.1
trunk/src/ft2demos-2.12.1/src/: common.c  common.h  compos.c  ftchkwd.c  ftcommon.c  ftcommon.h  ftdiff.c  ftmemchk.c  ftmulti.c  ftpatchk.c  ftsbit.c  fttimer.c  fttry.c  ftvalid.c  gbench.c  gbench.h  mlgetopt.c  output.h  testname.c
trunk/src/ft2demos-2.12.1/src/ftinspect/: ftinspect.cpp  ftinspect.pro  maingui.cpp  meson.build
trunk/src/ft2demos-2.12.1/src/ftinspect/engine/: engine.cpp  engine.hpp
trunk/src/ft2demos-2.12.1/src/ftinspect/rendering/: glyphbitmap.cpp  glyphoutline.cpp  glyphoutline.hpp  glyphpointnumbers.cpp  glyphpointnumbers.hpp  glyphpoints.cpp  grid.cpp
trunk/src/ft2demos-2.12.1/src/ftinspect/widgets/: qcomboboxx.hpp  qgraphicsviewx.cpp  qspinboxx.cpp  qspinboxx.hpp
trunk/src/ft2demos-2.12.1/subprojects/: freetype2  freetype2.wrap
(+323 files in other folders)
